feature(app_two): complete app setup

--- a/second_app/app_two/templates/app_two/home.html
+++ b/second_app/app_two/templates/app_two/home.html
@@ -3,7 +3,7 @@
 <head>
     <title>My Second App</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'two_app/style.css' %}">
+    <link rel="stylesheet" href="{% static 'app_two/style.css' %}">
 </head>
 <body>
     <h1>Welcome to Lerah's Website</h1>
