feature(app_two): complete app setup

--- a/second_app/app_two/templates/app_two/home.html
+++ b/second_app/app_two/templates/app_two/home.html
@@ -17,6 +17,7 @@
 
     {% if greeting %}
         <h2>{{ greeting }}</h2>
+        <p>Your name has <strong>{{ letter_count }}</strong> letters.</p>
     {% endif %}
 </body>
 </html>
